--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,7 @@ dmypy.json
 # Pyre type checker
 .pyre/
 *fatsta
+.pkl
 *.pkl
 __pycache__/
 checkpoints/
@@ -136,3 +137,7 @@ results/
 wandb/
 .wandb/
 *.pt
+*.pdf
+.pdf
+*.csv
+.csv
